@@ -145,6 +145,14 @@ module PageObject
         def clear_cookies
           @browser.manage.delete_all_cookies
         end
+        
+        #
+        # platform method to save the current screenshot to a file
+        # See PageObject#save_screenshot
+        #
+        def save_screenshot(file_name)
+          @browser.save_screenshot(file_name)
+        end
 
         #
         # platform method to get the value stored in a text field
